Correcting some more types
- SizedIngredient
- FluidIngredient
- Edge cases in record and lambda
- Fixed forge event
- Extended throwable in class collection
- `.gitignore`